[package]
name = "cosmic-dwt"
version = "0.3.2-dev"
edition = "2024"
license = "MIT AND GPL-3.0-only"

[dependencies]
anyhow = "1.0.103"
bpaf = { version = "0.9.26", features = ["bpaf_derive", "bright-color"] }
log = "0.4.33"
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
stderrlog = "0.6.0"
